<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_appointment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_appointment" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_inbox" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_settings" />
</menu>